Update vsts-integration-linux.yml for Azure Pipelines

--- a/vsts-integration-linux.yml
+++ b/vsts-integration-linux.yml
@@ -30,6 +30,6 @@ jobs:
     inputs:
       command: 'test'
       projects: 'Integration\Integration.sln'
-      arguments: $(buildArgs)
+      arguments: $(testArgs)
 
 
