--- a/vsts-integration.yml
+++ b/vsts-integration.yml
@@ -1,8 +1,12 @@
-pool:
-  vmImage: 'windows-latest'
+variables:
+  buildArgs: '-property:configuration=release'
+  testArgs: '$(buildArgs) -f netcoreapp3.1'
+
 
 jobs:
 - job: 'MSBuild'
+  pool:
+    vmImage: 'windows-latest'
   steps:
   - powershell: |
      (new-object Net.WebClient).DownloadString("https://raw.github.com/tom-englert/BuildScripts/master/BuildScripts.ps1") | iex
@@ -41,9 +45,10 @@ jobs:
       PathtoPublish: '$(build.artifactstagingdirectory)'
       ArtifactName: nuget
 
+
 - job: 'DotnetBuild'
-  variables:
-    buildArgs: '-property:configuration=release'
+  pool:
+    vmImage: 'windows-latest'
   steps:
   - task: DotNetCoreCLI@2
     displayName: 'Build Fody'
@@ -71,3 +76,63 @@ jobs:
       arguments: $(buildArgs)
 
 
+- job: 'DotnetBuild-Mac'
+  pool:
+    vmImage: 'macOS-latest'
+  steps:
+  - task: DotNetCoreCLI@2
+    displayName: 'Build Fody'
+    inputs:
+      command: 'build'
+      projects: 'Fody.sln'
+      arguments: $(buildArgs)
+  - task: DotNetCoreCLI@2
+    displayName: 'Test Fody'
+    enabled: false
+    inputs:
+      command: 'test'
+      projects: 'Fody.sln'
+      arguments: $(testArgs)
+  - task: DotNetCoreCLI@2
+    displayName: 'Build Integration'
+    inputs:
+      command: 'build'
+      projects: 'Integration/Integration.sln'
+      arguments: $(buildArgs)
+  - task: DotNetCoreCLI@2
+    displayName: 'Test Integration'
+    inputs:
+      command: 'test'
+      projects: 'Integration/Integration.sln'
+      arguments: $(testArgs)
+
+
+- job: 'DotnetBuild-Linux'
+  pool:
+    vmImage: 'ubuntu-latest'
+  steps:
+  - task: DotNetCoreCLI@2
+    displayName: 'Build Fody'
+    inputs:
+      command: 'build'
+      projects: 'Fody.sln'
+      arguments: $(buildArgs)
+  - task: DotNetCoreCLI@2
+    displayName: 'Test Fody'
+    enabled: false
+    inputs:
+      command: 'test'
+      projects: 'Fody.sln'
+      arguments: $(testArgs)
+  - task: DotNetCoreCLI@2
+    displayName: 'Build Integration'
+    inputs:
+      command: 'build'
+      projects: 'Integration/Integration.sln'
+      arguments: $(buildArgs)
+  - task: DotNetCoreCLI@2
+    displayName: 'Test Integration'
+    inputs:
+      command: 'test'
+      projects: 'Integration/Integration.sln'
+      arguments: $(testArgs)
