--- a/vsts-integration.yml
+++ b/vsts-integration.yml
@@ -1,6 +1,6 @@
 variables:
-  buildArgs: '-property:configuration=release'
-  testArgs: '$(buildArgs) -f netcoreapp3.1'
+  buildArgs: '-c Release'
+  testArgs: '$(buildArgs) -f netcoreapp3.1 --no-build'
 
 
 jobs:
@@ -88,7 +88,7 @@ jobs:
       arguments: $(buildArgs)
   - task: DotNetCoreCLI@2
     displayName: 'Test Fody'
-    enabled: false
+    enabled: false # fody tests currently do not run on mac/linux
     inputs:
       command: 'test'
       projects: 'Fody.sln'
@@ -119,7 +119,7 @@ jobs:
       arguments: $(buildArgs)
   - task: DotNetCoreCLI@2
     displayName: 'Test Fody'
-    enabled: false
+    enabled: false # fody tests currently do not run on mac/linux
     inputs:
       command: 'test'
       projects: 'Fody.sln'
