--- a/Integration/WithNugetWeavers/WithNugetWeavers.csproj
+++ b/Integration/WithNugetWeavers/WithNugetWeavers.csproj
@@ -9,7 +9,7 @@
     <PackageReference Include="Virtuosity.Fody" Version="1.21.3" />
   </ItemGroup>
 
-  <Target Name="VerifyThereAreNoWeaversInOutput" AfterTargets="AfterBuild">
+  <Target Name="VerifyThereAreNoWeaversInOutput" AfterTargets="PostBuildEvent">
     <Error Condition="Exists('$(OutDir)Virtuosity.dll')"
            Text="Virtuosity.dll found in build output" />
   </Target>
