Fix #1129: Use Mono.Cecil via submodule

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Checkout submodules
+        run: git submodule update --init --recursive
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
@@ -86,6 +89,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Checkout submodules
+        run: git submodule update --init --recursive
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1
