--- a/Fody/Fody.nuspec
+++ b/Fody/Fody.nuspec
@@ -19,13 +19,14 @@
     <file src="..\FodyHelpers\bin\$configuration$\netstandard2.0\FodyHelpers.dll" target="netclassictask" />
     <file src="..\FodyCommon\bin\$configuration$\net472\FodyCommon.dll" target="netclassictask" />
     <file src="..\FodyIsolated\bin\$configuration$\net472\FodyIsolated.dll" target="netclassictask" />
-    <file src="..\Lib\Cecil\net40\Mono*.*" target="netclassictask" />
+    <file src="..\cecil\Lib\$configuration$\net40\Mono*.*" target="netclassictask" />
 
     <file src=".\bin\$configuration$\netstandard2.0\Fody.dll" target="netstandardtask" />
     <file src="..\FodyHelpers\bin\$configuration$\netstandard2.0\FodyHelpers.dll" target="netstandardtask" />
     <file src="..\FodyCommon\bin\$configuration$\netstandard2.0\FodyCommon.dll" target="netstandardtask" />
     <file src="..\FodyIsolated\bin\$configuration$\netstandard2.0\FodyIsolated.dll" target="netstandardtask" />
-    <file src="..\Lib\Cecil\netstandard2.0\Mono*.*" target="netstandardtask" />
+    <file src="..\cecil\Lib\$configuration$\netstandard2.0\Mono*.dll" target="netstandardtask" />
+    <file src="..\cecil\Lib\$configuration$\netstandard2.0\Mono*.pdb" target="netstandardtask" />
 
     <file src="Fody.targets" target="build" />
     <file src="..\License.txt"  />
