--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,6 @@
 image: Visual Studio 2022
+install:
+- cmd: git submodule update --init --recursive
 environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
