fine-tune build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Checkout submodules
-        run: git submodule update --init --recursive
+        with:
+          submodules: true
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
@@ -53,9 +52,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Checkout submodules
-        run: git submodule update --init --recursive
+        with:
+          submodules: true
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
@@ -89,9 +87,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Checkout submodules
-        run: git submodule update --init --recursive
+        with:
+          submodules: true
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1
