--- a/vsts-integration.yml
+++ b/vsts-integration.yml
@@ -1,6 +1,6 @@
 variables:
   buildArgs: '-c Release'
-  testArgs: '$(buildArgs) -f netcoreapp3.1 --no-build'
+  testArgs: '$(buildArgs) -f net6.0 --no-build'
 
 resources:
   repositories:
@@ -14,34 +14,44 @@ jobs:
   pool:
     vmImage: 'windows-2022'
   steps:
+
+  - task: NuGetToolInstaller@1
+    inputs:
+      versionSpec: 
+
   - powershell: |
      (new-object Net.WebClient).DownloadString("https://raw.github.com/tom-englert/BuildScripts/master/BuildScripts.ps1") | iex
      Project-SetVersion "Directory.Build.props"  | Build-AppendVersionToBuildNumber
     displayName: 'Patch version'
+
   - task: DotNetCoreCLI@2
     displayName: 'Build Fody'
     inputs:
       command: 'build'
       projects: 'Fody.sln'
       arguments: $(buildArgs)
+
   - task: DotNetCoreCLI@2
     displayName: 'Build Integration'
     inputs:
       command: 'build'
       projects: 'Integration\Integration.sln'
       arguments: $(buildArgs)
+
   - task: DotNetCoreCLI@2
     displayName: 'Test Fody'
     inputs:
       command: 'test'
       projects: 'Fody.sln'
       arguments: $(buildArgs)
+
   - task: DotNetCoreCLI@2
     displayName: 'Test Integration'
     inputs:
       command: 'test'
       projects: 'Integration\Integration.sln'
       arguments: $(buildArgs)
+
   - task: CopyFiles@2
     displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
     inputs:
@@ -49,6 +59,7 @@ jobs:
       Contents: 'nugets\*.nupkg'
       TargetFolder: '$(build.artifactstagingdirectory)'
       flattenFolders: true
+
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: nuget'
     inputs:
