--- a/Integration/SampleTargetTests/SampleTargetTests.csproj
+++ b/Integration/SampleTargetTests/SampleTargetTests.csproj
@@ -14,7 +14,7 @@
 
   <!-- Do NOT update these versions, it's for backward compatibility testing!!! -->
   <ItemGroup>
-    <PackageReference Include="JetBrainsAnnotations.Fody" Version="2.10.0" />
-    <PackageReference Include="NullGuard.Fody" Version="1.8.5" />
+    <PackageReference Include="JetBrainsAnnotations.Fody" Version="2.10.0" PrivateAssets="All" />
+    <PackageReference Include="NullGuard.Fody" Version="1.8.5" PrivateAssets="All" />
   </ItemGroup>
 </Project>
