--- a/Integration/WithNugetAndInSolutionWeavers/WithNugetAndInSolutionWeavers.csproj
+++ b/Integration/WithNugetAndInSolutionWeavers/WithNugetAndInSolutionWeavers.csproj
@@ -5,7 +5,7 @@
 
   <ItemGroup>
     <PackageReference Include="Fody" Version="$(IntegrationVersion)" />
-    <PackageReference Include="Virtuosity.Fody" Version="1.21.3" />
+    <PackageReference Include="Virtuosity.Fody" Version="1.21.3" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
