Fix #1167: Hook FodyTarget on TargetsTriggeredByCompilation instead of AfterTargets if VS is >=2022

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -9,6 +9,8 @@
     <FodyGenerateXsd Condition="$(FodyGenerateXsd) == ''">true</FodyGenerateXsd>
     <MsBuildMajorVersion>15</MsBuildMajorVersion>
     <MsBuildMajorVersion Condition="'$(MSBuildVersion)' != ''">$([System.Version]::Parse($(MSBuildVersion)).Major)</MsBuildMajorVersion>
+    <FodyAfterTargets Condition="($(MsBuildMajorVersion) &lt; 17) AND '$(FodyAfterTargets)'==''">AfterCompile</FodyAfterTargets>
+    <TargetsTriggeredByCompilation>$(TargetsTriggeredByCompilation);FodyTarget</TargetsTriggeredByCompilation>
   </PropertyGroup>
 
   <ItemGroup Condition="Exists($(ProjectWeaverXml))">
@@ -28,7 +30,7 @@
 
   <Target
       Name="FodyTarget"
-      AfterTargets="AfterCompile"
+      AfterTargets="$(FodyAfterTargets)"
       Condition="Exists(@(IntermediateAssembly)) And ($(DesignTimeBuild) != true Or $(BuildingForLiveUnitTesting) == true) And $(DisableFody) != true"
       DependsOnTargets="$(FodyDependsOnTargets)"
       Inputs="@(IntermediateAssembly);$(ProjectWeaverXml)"
