--- a/SampleWeaver/SampleWeaver.csproj
+++ b/SampleWeaver/SampleWeaver.csproj
@@ -2,13 +2,11 @@
   <PropertyGroup>
     <!-- This is just to test FodyPackaging, use local output path -->
     <PackageOutputPath>$(ProjectDir)bin</PackageOutputPath>
-  </PropertyGroup>
-
-  <Import Project="..\FodyPackaging\build\FodyPackaging.props" />
-
-  <PropertyGroup>
     <TargetFrameworks>netstandard1.0;netstandard2.0;net472</TargetFrameworks>
   </PropertyGroup>
-
+  <Import Project="..\FodyPackaging\build\FodyPackaging.props" />
   <Import Project="..\FodyPackaging\build\FodyPackaging.targets" />
+  <ItemGroup>
+    <Using Remove="System.Net.Http" />
+  </ItemGroup>
 </Project>
