--- a/DummyAssembly/DummyAssembly.csproj
+++ b/DummyAssembly/DummyAssembly.csproj
@@ -3,4 +3,7 @@
     <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+  <ItemGroup>
+    <Using Remove="System.Net.Http" />
+  </ItemGroup>
 </Project>
