--- a/FodyCommon/FodyCommon.csproj
+++ b/FodyCommon/FodyCommon.csproj
@@ -12,5 +12,6 @@
   <ItemGroup>
     <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="All" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" Condition="$(Configuration) == 'Release'" PrivateAssets="All" />
+    <Using Remove="System.Net.Http" />
   </ItemGroup>
 </Project>
