Fix integration test
The dependency to the in-solution weavers project was not declared.

--- a/Integration/Directory.Build.targets
+++ b/Integration/Directory.Build.targets
@@ -5,6 +5,9 @@
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+
+    <!-- Fody warnings are expected in the integration test -->
+    <FodyTreatWarningsAsErrors>false</FodyTreatWarningsAsErrors>
   </PropertyGroup>
 
 </Project>
