Embed a simplified readme in the nuget package

--- a/Fody/Fody.nuspec
+++ b/Fody/Fody.nuspec
@@ -6,7 +6,7 @@
     <authors>$authors$</authors>
     <developmentDependency>true</developmentDependency>
     <license type="file">License.txt</license>
-    <readme>readme.md</readme>
+    <readme>package_readme.md</readme>
     <projectUrl>$projectUrl$</projectUrl>
     <icon>package_icon.png</icon>
     <iconUrl>$iconUrl$</iconUrl>
@@ -32,7 +32,7 @@
 
     <file src="Fody.targets" target="build" />
     <file src="..\License.txt"  />
-    <file src="..\readme.md"  />
+    <file src="..\package_readme.md"  />
     <file src="..\package_icon.png"  />
   </files>
 </package>
